--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id='app' style="box-sizing: border-box"></div>
-  <script src="/component/bundle.js"></script>
+  <script src="._dist/component/bundle.js"></script>
 </body>
 
 </html>
